--- a/assets/css/templatemo-onix-digital.css
+++ b/assets/css/templatemo-onix-digital.css
@@ -294,6 +294,44 @@ body {
   color: #fff;
 }
 
+.main-tokopedia-button-hover a {
+  display: inline-flex;
+  background-color: #42B549;
+  font-size: 15px;
+  font-weight: 400;
+  color: #fff;
+  text-transform: capitalize;
+  padding: 12px 25px;
+  border-radius: 23px;
+  letter-spacing: 0.25px;
+  transition: all .5s;
+  margin-top: 15px;
+}
+
+.main-tokopedia-button-hover a:hover {
+  transform: scale(1.1);
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.main-shopee-button-hover a {
+  margin-top: 15px;
+  display: inline-flex;
+  background-color: #f48220;
+  font-size: 15px;
+  font-weight: 400;
+  color: #fff;
+  text-transform: capitalize;
+  padding: 12px 40px;
+  border-radius: 38px;
+  letter-spacing: 0.25px;
+  transition: all .5s;
+}
+
+.main-shopee-button-hover a:hover {
+  transform: scale(1.1);
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
 /*
 ---------------------------------------------
 header
@@ -1793,131 +1831,6 @@ contact
 ---------------------------------------------
 */
 
-.contact-dec img {
-  position: absolute;
-  z-index: 1;
-  width: 459px;
-  height: 702px;
-  right: 0;
-  bottom: -400px;
-}
-
-.contact-left-dec img {
-  position: absolute;
-  z-index: 1;
-  width: 174px;
-  height: 319px;
-  left: 0;
-  top: 120px;
-}
-
-.contact-us {
-  z-index: 2;
-  position: relative;
-  padding-top: 120px;
-  margin-top: 0px;
-}
-
-.contact-us .section-heading h2 {
-  margin-right: 100px;
-  margin-bottom: 40px;
-}
-
-.contact-us #map iframe {
-  border-radius: 23px;
-  position: relative;
-  z-index: 2;
-}
-
-.contact-us .info {
-  margin-top: 30px;
-  position: relative;
-  z-index: 5;
-  display: inline-flex;
-}
-
-.contact-us .info span {
-  opacity: 1;
-  display: inline-flex;
-  margin-right: 30px;
-}
-
-.contact-us .info span i {
-  float: left;
-  width: 46px;
-  height: 46px;
-  display: inline-block;
-  text-align: center;
-  line-height: 46px;
-  background: rgb(255,104,95);
-  background: linear-gradient(105deg, rgba(255,104,95,1) 0%, rgba(255,144,104,1) 100%);
-  border-radius: 50%;
-  color: #fff;
-  font-size: 22px;
-  margin-left: 30px;
-  margin-right: 15px;
-}
-
-.contact-us .info span a {
-  color: #f48220;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 25px;
-  text-transform: none;
-}
-
-form#contact {
-  margin-left: -100px;
-  position: relative;
-  z-index: 2;
-  background-image: url(../images/contact-form-bg.png);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
-  padding: 60px 120px;
-  border-radius: 20px;
-}
-
-form#contact input {
-  width: 100%;
-  height: 46px;
-  border-radius: 0px;
-  background-color: transparent;
-  border-bottom: 1px solid #9bdbf8;
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  outline: none;
-  font-size: 15px;
-  font-weight: 300;
-  color: #2a2a2a;
-  padding: 0px 0px;
-  margin-bottom: 35px;
-}
-
-form#contact input::placeholder {
-  color: #afafaf;
-}
-
-form#contact button {
-  display: inline-block;
-  background-color: #f48220;
-  font-size: 15px;
-  font-weight: 400;
-  color: #fff;
-  text-transform: capitalize;
-  padding: 12px 25px;
-  border-radius: 23px;
-  letter-spacing: 0.25px;
-  border: none;
-  outline: none;
-  transition: all .3s;
-}
-
-form#contact button:hover {
-  background-color: #335ba9;
-}
 
 
 /*
@@ -2167,3 +2080,33 @@ responsive
     margin-bottom: 20px;
   }
 }
+
+.social:hover {
+     -webkit-transform: scale(1.1);
+     -moz-transform: scale(1.1);
+     -o-transform: scale(1.1);
+ }
+ .social {
+     -webkit-transform: scale(0.8);
+     /* Browser Variations: */
+
+     -moz-transform: scale(0.8);
+     -o-transform: scale(0.8);
+     -webkit-transition-duration: 0.5s;
+     -moz-transition-duration: 0.5s;
+     -o-transition-duration: 0.5s;
+ }
+
+/*
+    Multicoloured Hover Variations
+*/
+
+ #social-fb:hover {
+     color: #8a3ab9;
+ }
+ #social-tw:hover {
+     color: #075e54;
+ }
+ #social-em:hover {
+     color: #d34836;
+ }
