--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -94,3 +94,34 @@ h6 {
 	  background-repeat: no-repeat;
 	  background-position: 50% 50%;
   }
+
+	.btn {
+	  display: inline-block;
+	  font-weight: 400;
+	  line-height: 1.5;
+	  color: #212529;
+	  text-align: center;
+	  text-decoration: none;
+	  vertical-align: middle;
+	  cursor: pointer;
+	  -webkit-user-select: none;
+	  -moz-user-select: none;
+	  user-select: none;
+	  background-color: transparent;
+	  border: 1px solid transparent;
+	  padding: 0.375rem 0.75rem;
+	  font-size: 1rem;
+	  border-radius: 0.25rem;
+	  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+	}
+
+	.btn-outline-light {
+	  color: #000;
+		mix-blend-mode: screen;
+	}
+
+	.btn-outline-light:hover {
+		mix-blend-mode: screen;
+	  background-color: #f8f9fa;
+	  border-color: #f8f9fa;
+	}
